tempimages.log
  File "/mnt/c/Lorenzo/Sviluppo/UNIPD/QTSim/tempimages.py", line 96
    267099716748828,0.0017032931287768271,0.001679956167045576,0.0016566989539173358,0.001633521356720795,0.0016104232426786126,0.0015874044789089012,0.0015644649324267055,0.0015416044701454755,0.0015188229588785345,0.0014961202653405426,0.001473496256148954,0.0014509507978254705,0.0014284837567974894,0.0014060949993995463,],dtype=float)
                                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
